8815
Sorry, can't reproduce:
```scala
scala> class ArrayUser[A /*: ClassTag*/](initSize:Int) {
     |   var it: Array[A] = _
     |   initIt(initSize)
     |   def initIt(initSize:Int) { it = new Array[A](initSize) }
     | }
<console>:29: error: cannot find class tag for element type A
         def initIt(initSize:Int) { it = new Array[A](initSize) }
                                         ^
```

Could you please try this in REPL?
